--- a/skills/examples/oop mapty/index.html
+++ b/skills/examples/oop mapty/index.html
@@ -26,17 +26,18 @@
 <body>
   <div class="container1">
     <button class="showBtn" id="btnCustomer"><i class="fa fa-user-friends"></i></button>
+    
     <div class="data data-hidden" id="data">
       <img src="img/logo.png" alt="" class="logo">
 
       <form class="form form-hidden">
-
+       <a class="closeForm"><i class="fa fa-times"></i></a>
         <label>اسم العميل</label>
         <input  class="customerName">
 
 
         <label >نوع العميل</label>
-        <select  class="selectType">
+        <select  class="selectType" >
           <option value="مخزن">مخزن</option>
           <option value="صيدلية">صيدلية</option>
           <option value="ماركت">ماركت</option>
@@ -61,18 +62,7 @@
 
       <div class="customers">
         <ul class="customers-data">
-          <li class="customer-data">
-            <span class="label customer-title">العميل</span>
-            <span class="customer-title-value">مخزن السلام</span>
-            <span class="label customer-city">المدينة</span>
-            <span class="customer-city-value">المنصورة</span>
-            <span class="label customer-debt">المديونية</span>
-            <span class="customer-debt-value">5000 جنيها</span>
-            <span class="label customer-date">التاريخ </span>
-            <span class="customer-date-value">25/03/2020</span>
-            <span class="label customer-days">فترة </span>
-            <span class="customer-days-value">500 يوم</span>
-          </li>
+
         </ul>
       </div>
     </div>
