--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -115,6 +115,8 @@
 
         <a href="../examples/notifacations/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/notification.JPG">notification</a>
 
+        <a href="../examples/coursal img/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/coursal.JPG">coursal img</a>
+
     </div>
     </div>
     <!-- end of single link -->
@@ -148,6 +150,7 @@
     <div class="subContainer">
         <a href="../examples/counter oop/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/counteroop.JPG">counter OOP</a>
         <a href="../examples/gallery oop/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/gallery oop.JPG">gallery OOP</a>
+        <a href="../examples/oop mapty/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/mapty.JPG">gallery OOP</a>
     </div>
     </div>
     <!-- end of single link -->
