--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -452,12 +452,13 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/coursal img/index.html">
-                <img src="../../img/gallerycss/css basic/notification.JPG" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/coursal.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">coursal img</h3>
                     <div class="learning">
                         <span class="magic-js">settimeout</span>
-                        <span class="magic-css">.remove()</span>
+                        <span class="magic-css">setInterval</span>
+                        <span class="magic-css">clearInterval</span>
                     </div>
                 </div>
             </a>
@@ -579,7 +580,7 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/oop mapty/index.html">
-                <img src="../../img/gallerycss/css basic/gallery oop.JPG" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/mapty.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">mapty oop</h3>
                     <div class="learning">
