--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -26,6 +26,7 @@
                         <li class="link-Nav"><a href="#intermediate">intermediate</a></li>
                         <li class="link-Nav"><a href="#advanced">advanced</a></li>
                         <li class="link-Nav"><a href="#oop">OOP</a></li>
+                        <li class="link-Nav"><a href="#ajax">Ajax</a></li>
                     </ul>
                 </div>
             </div>
@@ -591,6 +592,31 @@
             </a>
             </div>
 <!--qwe end of single card -->
+        </div>
+    </section>
+<!-- end of section -->
+
+<!-- start of section -->
+    <section class="section" id="ajax">
+        <div class="section-title">
+            <h2 class="title">javascript Ajax projects</h2>
+        </div>
+        <div class="section-container">
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/xmlhttpRequest/index.html">
+                <img src="../../img/gallerycss/css basic/counteroop.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">countries xml</h3>
+                    <div class="learning">
+                       <span class="magic-js">oop fn constructor</span>
+                       <span class="magic-js">oop ES6 classes</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+
         </div>
     </section>
 <!-- end of section -->
