--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -161,7 +161,9 @@
     <a href="#" class="arrowDown"><i class="fa fa-sort-down"></i></a>
     <small class="count">2</small>
     <div class="subContainer">
-        <a href="../examples/xmlhttpRequest/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/counteroop.JPG">xml http countries</a>
+        <a href="../examples/xmlhttpRequest/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/xml.JPG">xml http countries</a>
+
+        <a href="../examples/countriesPromies/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/xml.JPG">fetch countries</a>
     </div>
     </div>
     <!-- end of single link -->
