--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -605,12 +605,27 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/xmlhttpRequest/index.html">
-                <img src="../../img/gallerycss/css basic/counteroop.JPG" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/xml.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">countries xml</h3>
                     <div class="learning">
-                       <span class="magic-js">oop fn constructor</span>
-                       <span class="magic-js">oop ES6 classes</span>
+                       <span class="magic-js">xmlhttpRequest</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/countriesPromies/index.html">
+                <img src="../../img/gallerycss/css basic/xml.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">countries fetch</h3>
+                    <div class="learning">
+                       <span class="magic-js">promies</span>
+                       <span class="magic-js">fetch</span>
+                    </div>
                     </div>
                 </div>
             </a>
