--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -247,6 +247,20 @@
             </a>
             </div>
 <!--qwe end of single card -->
+
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/random img/index.html">
+                <img src="../../img/gallerycss/css basic/joemodel.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">random img</h3>
+                    <div class="learning">
+                  
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
         </div>
     </section>
 <!-- end of section -->
