start my password

--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -77,6 +77,9 @@
 
         <a href="../examples/Event Propagation/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/popogation.JPG">Event Propagation</a>
 
+        <a href="../examples/random img/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/randomImg.JPG">random img</a>
+        <a href="../examples/passwordStrength/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/passwordStrenth.JPG">password strength</a>
+
 
     </div>
     </div>
