--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -251,9 +251,23 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/random img/index.html">
-                <img src="../../img/gallerycss/css basic/joemodel.JPG" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/randomImg.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">random img</h3>
+                    <div class="learning">
+                  
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/passwordStrength/index.html">
+                <img src="../../img/gallerycss/css basic/passwordStrenth.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">password Strenth</h3>
                     <div class="learning">
                   
                     </div>
